# female_lama

./: .gitignore  Dockerfile  README.md  ai.py  auth.py  bot.py  calculate.py  creds.yaml.template  entrypoint.sh  environment.yml  generate_credentials_file.py  hangman.py  log.py  peers.py  perf_improvement.txt  persistence.py  points.py  pyproject.toml  remux.py  requirements.txt  rundocker.sh  shuffle.py  test.py  trigger.py  upload.py  wettest.service  xmpp.py
callbacks/: wettest.py  wettest_slave.py
callbacks/common/: tempban.py
devel/: Dockerfile
src/: __init__.py  ai.py  auth.py  bot.py  calculate.py  hangman.py  log.py  peers.py  points.py  sqlite_persistence.py  trigger.py  upload.py  urban.py
src/callbacks/: wettest.py  wettest_slave.py
